--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <button type="submit" class="btn btn2">Submit</button>
 
                     </form>
-                    <span id="msg">Hello</span>
+                    <span id="msg"></span>
 
             </div>
     
